--- a/edit-log.tex
+++ b/edit-log.tex
@@ -13,6 +13,7 @@
                                                             สมมติฐาน และสิ่งที่ต้องการนำเสนอ \\ \hline
                     & \pageref{sec:sub:sub:cfg}     & ปรับเนื้อหา              & ปรับเนื้อหาให้กระชับมากขึ้น \\ \hline
                     & \pageref{sec:sub:sub:scg}     & ปรับเนื้อหา              & ปรับเนื้อหาให้กระชับมากขึ้น \\ \hline
+                    & \pageref{sec:sub:infeasible-path}     & ปรับเนื้อหา              & ปรับเนื้อหาให้กระชับมากขึ้น \\ \hline
                     & \pageref{sec:sub:bandb}       & เพิ่มงานวิจัยที่เกี่ยวข้อง     & เพิ่มงานวิจัยที่เกี่ยวข้องกับการสร้างกรณีทดสอบด้วย{\Algorithm} 
                                                             Branch and bound\\ \hline
                     & \pageref{sec:objective}       & ปรับวัตถุประสงค์ ข้อ 1.    & ยกประโยค {\textit "เพื่อสร้างกรณีทดสอบ..."} 
