Add section label

--- a/related/program-paths.tex
+++ b/related/program-paths.tex
@@ -165,6 +165,7 @@
 
 % - - - - - - - - - - - - - - - - - - - -
 \subsection{\FirstTimeDefine{\InfeasiblePath}{\InfeasiblePathEN}}
+\label{sec:sub:infeasible-path}
 
 \InfeasiblePath คือ ทางเดินที่ไม่สามารถหาค่าทุก ๆ ความเป็นไปได้ซึ่งสอดคล้องกับ{\PredicateNode}ที่อยู่บนทางเดินนั้น 
 เพื่อทำให้โปรแกรมทำงานบนเส้นทางนั้นได้ \cite{Naik2008} หากพิจารณาจากชุดรหัสเทียมใน{\figref{fig:pseudocodeGrading}} 
