Refine related work

--- a/related-work/related-work.tex
+++ b/related-work/related-work.tex
@@ -31,7 +31,7 @@
 
 จะเห็นได้จากการทดลองของผู้วิจัยที่สามารถสร้างกรณีทดสอบด้วย{\Algorithm}ที่นำเสนอ สามารถสร้างกรณีทดสอบได้ครอบคลุมมากกว่า{\Algorithm}ที่นำมาเปรียบเทียบ 
 โดยใช้เพียง{\StaticInformation}เท่านั้น ซึ่งไม่จำเป็นต้องส่งกระทำการทดสอบ{\sourcecode}แต่อย่างใด หากแต่ข้อมูลทดสอบที่ใช้ในการทดลองนี้มีขนาดเล็ก 
-(จำนวนแถวน้อยที่สุดคือ 21 บรรทัด และมากที่สุดคือ 59 บรรทัด) และเป็น{\sourcecode}ที่ไม่ได้อยู่ในลักษณะของการพัฒนาโปรแกรมเชิงวัตถุ 
+(21-59 บรรทัด) และเป็น{\sourcecode}ที่ไม่ได้อยู่ในลักษณะของการพัฒนาโปรแกรมเชิงวัตถุ 
 ดังนั้นหากสามารถนำขั้นตอนวิธีดังที่งานวิจัยนำเสนอมาใช้ในโปรแกรมที่มีขนาดใหญ่ขั้นและพัฒนาด้วยแนวคิดเชิงวัตถุ 
 จะทำให้สามารถหากรณีทดสอบที่ครอบคลุมความสัมพันธ์ระหว่าง{\softwareComponent}ได้ดียิ่งขึ้น
 
@@ -39,15 +39,19 @@
 \subsection{งานวิจัย {\it "GRT: Program-analysis-guided random testing"} \cite{Ma2016}}
 \label{sec:sub:grt}
 
-งานวิจัยชิ้นนี้ได้นำเสนอกระบวนการปรับปรุงการสุ่มค่าที่จากเดิมนั้นจะสุ่มค่าแบบไร้ทิศทาง หรือกำหนดกรอบการสุ่มข้อมูลนำเข้าไว้อย่างกว้าง ๆ 
-ทำให้ค่าข้อมูลนำเข้าที่สุ่มได้นั้นมีโอกาสที่จะค้นพบข้อผิดพลาดภายในโปรแกรมได้น้อย งานวิจัยชิ้นนี้จึงได้เสนอแนวทางการนำข้อมูลที่จาก{\sourcecode} ของ
-ซอฟต์แวร์ภายใต้การทดสอบเข้ามาร่วมพิจารณา โดยจัดเก็บค่าคงที่ ที่ใช้งานโดยทั่วไป (Global) ภายใน{\sourcecode} เข้าร่วมพิจารณา 
+ปัญหาหนึ่งของการสร้างข้อมูลทดสอบแบบสุ่มค่าคือค่าที่ได้นั้นไร้ทิศทางทำให้โอกาสที่จะเจอกับข้อผิดพลาดนั้นน้อยลง 
+ตลอดจนค่าที่สุ่มได้นั้นไม่สามารถทดสอบ{\sourcecode}ภายในบริเวณที่ต้องการ งานวิจัยชิ้นนี้จึงได้เสนอแนวทางการนำข้อมูลที่จาก{\sourcecode}
+ซึ่งเป็น{\StaticInformation} และ{\DynamicInformation}ที่ได้หลังจากการทดสอบ{\software} 
+ของ{\SUT}เข้ามาร่วมพิจารณา โดยจัดเก็บค่าคงที่ที่มีชนิดข้อมูลพื้นฐาน ได้แก่ ตัวอักษร ({\code String}) ตัวเลข ({\code int, double, float}) 
+และข้อมูลเชิงตรรกะ ({\code bool}) จาก{\sourcecode} เข้าร่วมพิจารณาเพื่อหาข้อมูลทดสอบที่สอดคล้องตามเงื่อนไขที่พบบน{\TestPath}ที่เลือก 
+ซึ่งการใช้งาน{\StaticInformation}ร่วมกันกับ{\DynamicInformation} เข้าร่วมพิจารณาเพื่อสร้างข้อมูลทดสอบนั้น 
+ให้ผลการวิจัยว่าสามารถสร้างกรอบการสุ่มข้อมูลทดสอบเพื่อช่วยให้ ได้ข้อมูลนำเข้าที่สามารถค้นพบข้อผิดพลาดภายในชุดข้อมูลตัวอย่างได้มากขึ้น 
+เมื่อเทียบกับวิธีการสุ่มข้อมูลแบบเดิมโดยไม่กำหนดกรอบ
 
-ซึ่งกระบวนการนั้นจะประกอบไปด้วยการจัดเก็บข้อมูลจาก{\sourcecode} และข้อมูลที่ได้จากการสั่งดำเนินการร่วมกัน ซึ่งให้ผลว่าสามารถสร้างกรอบการสุ่มค่าเพื่อช่วยให้
-ได้ข้อมูลนำเข้าที่สามารถค้นพบข้อผิดพลาดภายในชุดข้อมูลตัวอย่างได้มากขึ้น เมื่อเทียบกับวิธีการสุ่มข้อมูลแบบเดิม
+ดังนั้น จากแนวคิดการวิจัยข้างต้น จึงนำแนวคิดการใช้{\StaticInformation}เพื่อช่วยสร้างกรณีทดสอบและข้อมูลทดสอบในการดำเนินงานวิจัยครั้งนี้
 
 % - - - - - - - - - - - - - - - - - - - -
-\subsection{งานวิจัย "Eclat: Automatic Generation and Classification of Test Inputs" \cite{Heaton2000}}
+\subsection{งานวิจัย {\it "Eclat: Automatic Generation and Classification of Test Inputs"} \cite{Heaton2000}}
 \label{sec:sub:eclat}
 
 เนื่องจากการข้อมูลที่จะนำมาทดสอบนั้นมีขนาดใหญ่ ดังนั้นงานวิจัยนี้จึงเสนอแนวทางในการวิเคราะห์เพื่อหาซับเซตของข้อมูลนำเข้าทั้งหมดที่สามารถค้นพบข้อผิดพลาด
@@ -55,6 +59,4 @@
 ประกอบกับชุดข้อมูลที่ทำให้โปรแกรมทำงานได้ถูกต้อง ซึ่งผลลัพธ์ที่ทดลองกับกลุ่มตัวอย่างได้พบว่าวิธีการนี้สามารถลดชุดข้อมูลนำเข้าที่ใช้ทดสอบได้
 โดยยังมีประสิทธิภาพในการค้นหาข้อผิดพลาดไม่ต่างไปจากเดิม
 
-% % - - - - - - - - - - - - - - - - - - - -
-% \subsection{งานวิจัย "Automatic generation and classification of test inputs" \cite{Pacheco2005}}
-% การสร้างกลุ่มของกรณีทดสอบอย่างอัตโนมัติ ช่วยในการสร้างกรณีทดสอบ
+\clearpage
