Add section label

--- a/related/program-paths.tex
+++ b/related/program-paths.tex
@@ -111,6 +111,7 @@
 \end{table}
 
 \subsubsection{\FirstTimeDefine{\scg}{\scgEN}}
+\label{sec:sub:sub:scg}
 
 การพัฒนา{\software}เชิงวัตุ (Object-oriented programming: OOP) เป็นการรวมพฤติกรรมและความสามารถที่คล้ายคลึงกันเข้าไว้ด้วยกัน \cite{kindler2011}
 ในลักษณะของ\FirstTimeDefine{\class}{\classEN} \FirstTimeDefine{\method}{\methodEN} และ \FirstTimeDefine{\attribute}{\attributeEN} 
