Add section label

--- a/related-work/related-work.tex
+++ b/related-work/related-work.tex
@@ -1,4 +1,5 @@
 \section{งานวิจัยที่เกี่ยวข้อง} 
+\label{sec:related-work}
 
 ในการดำเนินการวิจัยครั้งนี้ ได้ศึกษางานวิจัยอื่น ๆ ที่คาดว่าจะสามารถนำมาประยุกต์ใช้เพื่อแก้ไขปัญหาข้างต้นได้ โดยมีงานวิจัยที่เลือกมาดังนี้
 
