Add package that support upper and lower branch

--- a/configures.tex
+++ b/configures.tex
@@ -4,6 +4,7 @@
 \usepackage{titlesec}
 \usepackage{pdflscape}
 \usepackage{tabularx}
+\usepackage{mathtools}
 
 \usepackage{algorithm} 
 \usepackage{algorithmic}
