--- a/thesis-lexicon.tex
+++ b/thesis-lexicon.tex
@@ -25,8 +25,8 @@
 
 \newcommand{\sourcecode}{รหัสต้นฉบับ}
 
-\newcommand{\TestCaseGeneration}{การสร้างข้อมูลทดสอบ}
-\newcommand{\TestCaseGenerationEN}{Test data generation}
+\newcommand{\TestDataGeneration}{การสร้างข้อมูลทดสอบ}
+\newcommand{\TestDataGenerationEN}{Test data generation}
 
 \newcommand{\RegressionTesting}{การทดสอบเชิงทดถอย}
 \newcommand{\RegressionTestingEN}{Regression testing}
@@ -126,3 +126,24 @@
 
 \newcommand{\tester}{นักทดสอบซอฟต์แวร์}
 \newcommand{\testerEN}{Software tester}
+
+\newcommand{\constantExtracting}{การรวบรวมค่าคงที่}
+\newcommand{\constantExtractingEN}{Constant extracting}
+
+\newcommand{\graphCreation}{การสร้างกราฟ}
+\newcommand{\graphCreationEN}{Graph creation}
+
+\newcommand{\sourcecodeInstrumention}{แทรกคำสั่งในรหัสต้นฉบับ}
+\newcommand{\sourcecodeInstrumentionEN}{Source code instrumentation}
+
+\newcommand{\testcaseGeneration}{การสร้างกรณีทดสอบ}
+\newcommand{\testcaseGenerationEN}{Test case generation}
+
+\newcommand{\testpathSelection}{การเลือกทางเดินทดสอบ}
+\newcommand{\testpathSelectionEN}{Test path selection}
+
+\newcommand{\randomTestData}{สุ่มข้อมูลนำเข้า}
+\newcommand{\randomTestDataEN}{Random test data}
+
+\newcommand{\testData}{ข้อมูลทดสอบ}
+\newcommand{\testDataEN}{Test data}
