--- a/thesis-lexicon.tex
+++ b/thesis-lexicon.tex
@@ -147,3 +147,6 @@
 
 \newcommand{\testData}{ข้อมูลทดสอบ}
 \newcommand{\testDataEN}{Test data}
+
+\newcommand{\testCaseGeneration}{การสร้างกรณีทดสอบ}
+\newcommand{\testCaseGenerationEN}{Test case generation}
