--- a/thesis-lexicon.tex
+++ b/thesis-lexicon.tex
@@ -150,3 +150,6 @@
 
 \newcommand{\testCaseGeneration}{การสร้างกรณีทดสอบ}
 \newcommand{\testCaseGenerationEN}{Test case generation}
+
+\newcommand{\expectedOutputAdjustment}{การปรับค่าคาดหวัง}
+\newcommand{\expectedOutputAdjustmentEN}{Expected output adjustment}
