--- a/thesis-lexicon.tex
+++ b/thesis-lexicon.tex
@@ -153,3 +153,6 @@
 
 \newcommand{\expectedOutputAdjustment}{การปรับค่าคาดหวัง}
 \newcommand{\expectedOutputAdjustmentEN}{Expected output adjustment}
+
+\newcommand{\executeSoftwareTesting}{ดำเนินการทดสอบซอฟต์แวร์}
+\newcommand{\executeSoftwareTestingEN}{Software testing execute}
