Fine tune for execute test suite

--- a/methodology/methodology.tex
+++ b/methodology/methodology.tex
@@ -223,9 +223,10 @@
 \end{figure}
 
 \subsection{\FirstTimeDefine{\executeSoftwareTesting}{\executeSoftwareTestingEN}}
+\label{sec:sub:executeSoftwareTesting}
 
-แนวทางการดำเนินงานในขั้นตอนนี้จะรับ {\it ชุดกรณีทดสอบ (ญ)} เข้าทดสอบร่วมกับ{\sourcecode}ที่ผ่าน{\it การแทรกคำสั่ง (จ)} จาก{\it ฐานข้อมูล (A)} 
-และรวบรวมข้อมูลที่เกิดจากชุดคำสั่งที่แทรกไว้ ซึ่งปรากฎขึ้นระหว่างการทดสอบเข้าไว้ด้วยกันเป็น {\it ผลลัพธ์การทดสอบซอฟต์แวร์ (ฎ)} 
+แนวทางการดำเนินงานในขั้นตอนนี้จะรับ {\it ชุดกรณีทดสอบ} เข้าทดสอบร่วมกับ{\sourcecode}ที่ผ่าน{\it \sourcecodeInstrumention} จาก{\it ฐานข้อมูล} 
+และรวบรวมข้อมูลที่เกิดจากชุดคำสั่งที่แทรกไว้ ซึ่งปรากฎขึ้นระหว่างการทดสอบเข้าไว้ด้วยกันเป็น {\it ผลลัพธ์การทดสอบซอฟต์แวร์} 
 เพื่อใช้ตรวจสอบให้แน่ใจว่ากรณีทดสอบนั้นสามารถทดสอบ{\TestPath}ที่เลือกได้ 
 
 \subsection{เปรียบเทียบผลลัพธ์การดำเนินงาน (8)}
