--- a/thesis-lexicon.tex
+++ b/thesis-lexicon.tex
@@ -156,3 +156,6 @@
 
 \newcommand{\executeSoftwareTesting}{ดำเนินการทดสอบซอฟต์แวร์}
 \newcommand{\executeSoftwareTestingEN}{Software testing execute}
+
+\newcommand{\testResultCompare}{เปรียบเทียบผลลัพธ์การดำเนินงาน}
+\newcommand{\testResultCompareEN}{Compare test excution result}
