--- a/limitation/limitation.tex
+++ b/limitation/limitation.tex
@@ -8,8 +8,8 @@
     \item รองรับจำนวน{\method}ภายใน{\CUT}สูงสุด{\class}ละไม่เกิน 5 {\method} \label{enu:lim:5methods}
     \item ข้อมูล{\scg}ที่สร้างขึ้นนั้นจะสนใจเฉพาะความสัมพันธ์ระหว่างคลาสที่อยู่ภายใน{\Package}จาวา (Java package) ตามที่ผู้ใช้ระบุ 
         โดยละเว้นชุดพัฒนามาตรฐานของภาษาจาวาและชุดคำสั่งภายนอก \label{enu:lim:scg}
-    \item รองรับข้อมูลนำเข้าประเภทตัวอักษร (มีชนิดข้อมูลเป็น String ในภาษาจาวา) ตัวเลข 
-        (มีชนิดข้อมูลเป็น byte, short, int, long, float และ double ในภาษาจาวา) และโครงสร้างข้อมูลจำกัดเขต (มีชนิดข้อมูลเป็น enum ในภาษาจาวา) 
+    \item รองรับข้อมูลนำเข้าประเภทตัวอักษร (มีชนิดข้อมูลเป็น \code{String} ในภาษาจาวา) ตัวเลข 
+        (มีชนิดข้อมูลเป็น \code{byte, short, int, long, float} และ \code{double} ในภาษาจาวา) และโครงสร้างข้อมูลจำกัดเขต (มีชนิดข้อมูลเป็น \code{enum} ในภาษาจาวา) 
         ยังไม่รองรับประเภทข้อมูลเฉพาะที่สร้างขึ้นเอง \label{enu:lim:datatype}
     \item รองรับโปรแกรมประยุกต์ที่พัฒนาขึ้นเพื่อใช้งานบนเครื่องคอมพิวเตอร์ส่วนบุคคล และ{\sourcecode}พัฒนาขึ้นด้วยภาษาจาวา  \label{enu:lim:datatype}
         % โดยไม่รวมถึงโปรแกรมประยุกต์ประเภทเว็บแอปพลิเคชัน
