Change for to from

--- a/coverpage-config.tex
+++ b/coverpage-config.tex
@@ -2,7 +2,7 @@
 % NEED BY \makethesiscover
 % - - - - - - - - - - - - - - - - - - - -
 \newcommand{\ThesisThaiName}{การสร้างกรณีทดสอบจากกราฟการเรียกเชิงสถิตของภาษาจาวา}
-\newcommand{\ThesisEnglishName}{Test case generation for Java static call graph}
+\newcommand{\ThesisEnglishName}{Test case generation from Java static call graph}
 \newcommand{\studentname}{นายสิทธิพงษ์ เหล่าโก้ก}
 \newcommand{\studentid}{5870972621}
 \newcommand{\curriculumn}{วิทยาศาสตร์มหาบัณฑิต}
