--- a/configures.tex
+++ b/configures.tex
@@ -16,6 +16,15 @@
 \usepackage[usernames,dvipsnames,svgnames,table]{xcolor}
 \definecolor{LightGray}{gray}{0.9}
 
+\usepackage{fancyhdr}
+\pagestyle{fancy}
+\fancyhf{}
+\rhead{\thepage}
+\renewcommand{\headrulewidth}{0pt}
+% \fancyhead[LO]{}
+% \fancyhead[RE]{}
+% \fancyfoot[C]{\thepage} 
+
 \usepackage{subcaption}
 \captionsetup[sub]{}
 
