Fixed page number

--- a/sitdhibong-proposal.tex
+++ b/sitdhibong-proposal.tex
@@ -24,9 +24,9 @@
     \input{edit-log}
     \clearpage
 
-    \makethesiscover
-
     \pagenumbering{arabic}
+    \rhead{\thepage}
+
     \ThesisTitlePage
 
     \input{intro/intro}
